cabal-version:      2.4
name:               Advent-of-Code2024
version:            0.1.0.0
build-type: Simple

author:             Baley Eccles
maintainer:         baleycod@gmail.com
                    
extra-source-files: README.md

library
  exposed-modules: Main
  other-modules: Day1
  hs-source-dirs: src
  build-depends: base >=4.7 && <5
  default-language: Haskell2010

executable your-executable-name
  main-is: Main.hs
  hs-source-dirs: src
  build-depends: base >=4.7 && <5
  default-language: Haskell2010
