cabal-version:      2.4
name:               Advent-of-Code2024
version:            0.1.0.0
build-type: Simple

author:             Baley Eccles
maintainer:         baleycod@gmail.com
                    
extra-source-files: README.md

library
  exposed-modules: Main
  hs-source-dirs: src
  build-depends: base >=4.7 && <5, regex-tdfa, parallel >= 3.2 && < 4.0
  default-language: Haskell2010

executable main
  main-is: Main.hs
  hs-source-dirs: src
  ghc-options: -O3 -g
  build-depends: base >=4.7 && <5, regex-tdfa, parallel >= 3.2 && < 4.0
  default-language: Haskell2010
